--- a/index.css
+++ b/index.css
@@ -1,9 +1,61 @@
 html {
     scroll-behavior: smooth;
 }
+body{
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+header{
+    position: relative;
+    width: 100%; 
+    height: 110vh;
+    overflow: hidden;
+    background-color: rgba(0, 0, 25, 0.45);
+}
+.header-content-container{
+    display: flex; 
+    width: 100%; 
+    height: 100%;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+}
+.navigation-bar{
+    width: 100%;
+    background-color: #5569dc;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+.navigation-link{
+    margin: 1rem;
+}
 a{
     text-decoration: none;
     color: inherit;
+}
+.skill-text{
+    min-width: 20vw;
+    padding: 0.5rem;
+}
+.progress-line{
+    display: flex;
+    align-items: center;
+    width: 30vw;
+    height: 1px;
+    background-color: #cad4e8;
+    position: relative;
+    margin-right: 10px;
+}
+.progress-bar{
+    width: 0;
+    height: 3px;
+    background-color: #5569dc;
+    transition: width 2s;
 }
 .playfair-display-italic-400 {
   font-family: "Playfair Display", serif;
